# Sound-handler

./: .gitignore  CMakeLists.txt  README.md
etc/: dplayback.cpp  psound.cpp  pulsesound.cpp
src/: playback.cpp  pmusic.cpp  record.cpp  record.hpp  recordmusic.cpp  recordmusic.hpp
